--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div id="animal-photos">
+    <h1 id="photo-heading">Animal Photos</h1>
+    <div id="photo-container"></div>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
